--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "proc-macro-issue-minimal-example"
-version = "0.1.0"
 authors = ["Mathis EON <eon@abes.fr>"]
 edition = "2018"
+name = "proc-macro-issue-minimal-example"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,4 +14,4 @@ proc-macro = true
 [dependencies]
 
 quote = "1.0.7"
-syn = {version = "1.0.52", features = ["extra-traits", "parsing"]}
+syn = {version = "1.0.52", features = ["full"]}
